sss ve özellik kıyaslama ekranı
içerik düzenlemeleri

--- a/sss.html
+++ b/sss.html
@@ -153,10 +153,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="accordion ui-accordion ui-widget ui-helper-reset ui-accordion-icons" role="tablist">
 
                             <!-- item -->
-                            <h2 class='ui-accordion-header' role='tab' aria-expanded='false' tabindex='0' id='ui-id-1' aria-controls='ui-id-2' aria-selected='false'>
+                            <h2 class="ui-accordion-header" role="tab" aria-expanded="true" tabindex="0" id="ui-id-1" aria-controls="ui-id-2" aria-selected="true">
                                 İade garantisi hangi ürün ve hizmetleri kapsar?
                             </h2>
-                            <div class='ui-accordion-content' role='tabpanel' style='display: none;' id='ui-id-2' aria-labelledby='ui-id-1' aria-hidden='true'>
+                            <div class="ui-accordion-content" role="tabpanel" style='display: block;' id="ui-id-2" aria-labelledby="ui-id-1" aria-hidden="false">
                                 <p>
                                     GoMail'in lisans içermeyen ürün ve hizmetlerini memnun kalmadığınız takdirde 15 gün içerisinde hizmet sözleşmesinde yer alan koşullara uygun olarak yerine getirmeniz ve talep etmeniz durumunda ücret iadesi
                                     doğrudan yapılır.</p>
@@ -166,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <h2 class='ui-accordion-header' role='tab' aria-expanded='false' tabindex='0' id='ui-id-1' aria-controls='ui-id-2' aria-selected='false'>
                                 Satın aldığım ürün ve hizmetlerle ilgili teknik destek hizmeti hangi kanallar üzerinden verilmektedir?
                             </h2>
-                            <div class='ui-accordion-content' role='tabpanel' style='display: none;' id='ui-id-2' aria-labelledby='ui-id-1' aria-hidden='true'>
+                            <div class='ui-accordion-content' role='tabpanel' style='display: block;' id='ui-id-2' aria-labelledby='ui-id-1' aria-hidden='true'>
                                 <p>
                                     GoMail, müşterilerine satın alma öncesinde olduğu gibi satın alma sonrasında da aynı hassasiyet ve titizlikle destek vermektedir. Müşterilerimiz destek taleplerini sistem üzerinden ticket veya özel müşteri
                                     temsilcilerine telefon yoluyla ulaşarak iletebilirler. Telefonla yapılan taleplerde de talebin kayıt altına alınması, müşteri memnuniyeti ve çalışan performansının ölçümlenmesi için oldukça öneli olduğundan
