--- a/toplu-mail-gonderim-fiyatlari.html
+++ b/toplu-mail-gonderim-fiyatlari.html
@@ -410,12 +410,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="exampleModalLabel">Paket Özellikleri</h4>
+        <h4 style="text-align: center;" class="modal-title" id="exampleModalLabel"><strong>Paket Özellikleri</strong></h4>
       </div>
       <div class="modal-body">
         <div class="priceContent">
                                     <div class="priceTitle">
-                                        <div class="pUPacket">Paket</div>
+                                        <div class="pUPacket">Özellik</div>
                                         <div class="pUSubscriber">Aylık Abonelik</div>
                                         <div class="pUAmount">Gönderdiğin Kadar Öde</div>
                                     </div>
@@ -423,11 +423,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="priceItem">
                                         <div class="pUPacket">
                                             <div class="pUPacketTop">
-                                                <div class="pUFullName">Sınırsız sayıda e-mail gönderimi</div>
+                                                <div class="pUFullName">Sınırsız Sayıda E-Mail Gönderimi</div>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><i class="fa fa-times" aria-hidden="true"></i></div>
+                                        <div class="pUAmount">Sahip Olduğunuz Gönderim Kredisi Kadar</div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -437,8 +437,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="pUFullName">E-Mail Şablon Tasarım Desteği</div>
                                             </div>
                                         </div>
-                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUSubscriber">İlk Tasarım Ücretsiz</div>
+                                        <div class="pUAmount">Ücretli</div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -449,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             </div>
                                         </div>
                                         <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
-                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount">5.000 Adet Ücretsiz</div>
                                     </div>
                                     <!-- end item -->
                                     <!-- item -->
@@ -485,12 +485,80 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
                                     </div>
                                     <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">Aktivite Raporu</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    </div>
+                                    <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">Coğrafi Konum Raporlama</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    </div>
+                                    <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">E-Bülten ve Landing Page Tasarım Aracı</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    </div>
+                                    <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">SMS Entegrasyonu</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    </div>
+                                    <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">KVKK Uyum ve Onay Formları</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    </div>
+                                    <!-- end item -->
+                                    <!-- item -->
+                                    <div class="priceItem">
+                                        <div class="pUPacket">
+                                            <div class="pUPacketTop">
+                                                <div class="pUFullName">Otomatik Alıcı Etiketleme</div>
+                                            </div>
+                                        </div>
+                                        <div class="pUSubscriber"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                        <div class="pUAmount"><i class="fa fa-check" aria-hidden="true"></i></div>
+                                    </div>
+                                    <!-- end item -->
+
+
                                 </div>
 
                     <!-- item -->
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
 
       </div>
     </div>
