--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p style="font-size:48px; line-height: 30px; font-weight: 100; color:black;">Hızlı ve güvenle</p>
                         <p style="font-size:48px; line-height: 52px; font-weight: 100; color:black;" class="cd-headline letters type">
                             <span class="cd-words-wrapper waiting">
-                                <b class="is-visible">kampanya ve duyuru</b>
+                                <b class="is-visible">fatura, ekstre, poliçe</b>
+                                <b>kampanya ve duyuru</b>
                                 <b>parola hatırlatma</b>
                                 <b>periyodik bildirim</b>
                                 <b>kutlama ve etkinlik</b>
@@ -225,8 +226,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class="main-title">
-                <h1><a href=”https://www.gomail.com.tr”>Katma Değerli Toplu E-Mail Gönderim Servisi</a></h1>
-                <p>GoMail, katma değerli servisleri ile kampanya, duyuru, etkinlik, hatırlatma, periyodik bilgilendirme vb. amaçlı<br>Toplu E-Mail gönderimlerinizi müşterilerinize daha kolay ve hızlı ulaşatırmanızı sağlar.</p>
+                <h1><a href=toplu-mail-gonderim-ozellikleri.html>Katma Değerli Toplu E-Mail Gönderim Servisi</a></h1>
+                <p>GoMail, katma değerli servisleri ile kampanya, duyuru, etkinlik, hatırlatma, fatura, ekstre, poliçe, ihbar ve ihtar bildirimleri gibi <br>anlık ve periyodik bilgilendirme amaçlı Toplu E-Mail gönderimlerinizi müşterilerinize daha kolay ve hızlı ulaşatırmanızı sağlar.</p>
             </div>
 
             <div class="row">
@@ -352,7 +353,7 @@ alınabilir.</p>
                 <div class="cozum-list col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="row">
                         <div class="col col-md-6 col-sm-6 col-xs-12">
-                            <a href="kurumsal-mail-hizmeti.html">
+                            <a href="kurumsal-mail-hizmeti.html#cloud-mail">
                               <img style="width:120px; height: 120px;" src="assets/img/cloud-mail.svg"><br><br>
                                 <h5>Bulut Mail</h5>
                                 <p>Küçük ve orta ölçekli ekiplerin performansı ile tüm ihtiyaçlarını karşılamak için tasarlandı.</p>
@@ -389,7 +390,7 @@ alınabilir.</p>
             <p>Avantajlı fırsatlardan haberdar olmak için e-bültenimize abone olun.</p>
             <!-- newsletter-form -->
             <div id="newsletter-form">
-                <form action="ebulten.php">
+                <form action="#">
                     <input class="arama" id="Text1" autocomplete="off" type="text" maxlength="70" placeholder="E-Posta Adresi">
                     <button class="getir btn btn-blue">Kayıt Ol</button>
                 </form>
