--- a/sozlesme.html
+++ b/sozlesme.html
@@ -161,7 +161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="right">
 
                         <div class="top-buttons">
-                            <a href="giris.html" class="btn btn-login"><i class="fa fa-user"></i> Giriş Yap</a>
+                            <a href="giris.html" class="btn btn-login1"><i class="fa fa-user"></i> Giriş Yap</a>
                             <a href="kayit.html" class="btn btn-white">Kayıt Ol</a>
                         </div>
 
